new layout changes and process highlighting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>CodeFlow</title>
     <script>
       var mxLoadResources = false;
     </script>
@@ -12,6 +12,6 @@
       externals: {mxGraph: "mxGraph"}
     </script>
   </head>
-  <body>
+  <body style="width:100%; height:100%"/>
   <!--script type="text/javascript" src="main.js"></script></body-->
 </html>
